# Message-Anality

./: pyproject.toml  requirements.txt
controler/: review.py
services/sentiment_analise/: bot_sentiment.py
